src/postgres/third-party-extensions/pgrx/pgrx-tests/tests/compile-fail/variadic-is-dead.rs
use pgrx::prelude::*;

fn main() {}
#[pg_extern]
fn whatever() -> variadic!(i32) {
    todo!()
}
