src/postgres/third-party-extensions/pgrx/pgrx-tests/tests/compile-fail/variadic-is-dead.stderr
error: type macros other than `composite_type!` are not yet implemented
 --> tests/compile-fail/variadic-is-dead.rs:5:18
  |
5 | fn whatever() -> variadic!(i32) {
  |                  ^^^^^^^^
